tests/basic/check/not_neg/040.pan.out
tests/basic/check/not_neg/040.pan:4:1-4: error: cannot solve constraints of f40
tests/basic/check/not_neg/040.pan:7:1-4: error: cannot solve constraints of f41