tests/basic/check/not_neg/040.pan
not : (x:bool) -> {y:bool|y = ~x}

f40 : {b:bool|false}
f40 = not true

f41 : {b:bool|false}
f41 = not false

